# wikipedia-ingestion

./: .env.example  README.md  pyproject.toml  requirements.txt  run_ingestion.md
config/: index_schema.json  pipeline.json
scripts/: 01_create_index.py  02_run_pipeline.py  03_fast_with_gemma.py  test_chunking.py
src/: chunking.py  embedding.py  opensearch_client.py  pipeline_nested.py
