[project]
name = "wikipedia-ingestion"
version = "0.1.0"
description = "Ingest Wikipedia CirrusSearch dumps into OpenSearch (nested index)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "requests-aws4auth>=1.2.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.2.2",
]

[project.optional-dependencies]
# For local embedding inference (EMBEDDING_PROVIDER=gemma)
gemma = [
    "sentence-transformers>=2.2.0",
]
